--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Elliott Wagner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Elliott Wagner (and AI)" />
+    <meta name="author" content="Elliott Wagner" />
     <meta name="description" content="Elliott Wagner's website that shows off his IT and Announcing side.">
     <link rel="icon" href="/images/icon.png">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
